<?xml version="1.0"?>
<package format="2">
  <name>lg_msg_defs</name>
  <version>0.0.0</version>
  <description>The lg_msg_defs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="will@endpoint.com">Will Plaut</maintainer>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
