<?xml version="1.0"?>
<package>
  <name>lg_msg_defs</name>
  <version>3.9.0</version>
  <description>Mgs types and service defs used throughout lg_ros_node packages</description>
  <maintainer email="lg@endpoint.com">End Point Liquid Galaxy Team</maintainer>
  <author email="will@endpoint.com">Will Plaut</author>
  <url type="website">https://github.com/EndPointCorp/lg_ros_nodes</url>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
